New favicon from Giani

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -7739,7 +7739,7 @@
 
 						var warns = DesktopContent.getXMLValue(req, "TableWarnings");
 						if (warns)
-							Debug.log("There were warnings found when loading table " +	 '" +
+							Debug.log("There were warnings found when loading table '" +
 									linkInfo.pairColTable + 
 									"' (you can treat them as informational):\n\n" +
 								warns, Debug.WARN_PRIORITY);
