--- a/onlineDoc/inject_otsdaq_utilities.html
+++ b/onlineDoc/inject_otsdaq_utilities.html
@@ -6,7 +6,7 @@
 <h1 style="font-family: 'Comfortaa', arial;">Welcome to the <i>otsdaq</i> Source Code Documentation</h1>
 
 <a href="http://otsdaq.fnal.gov">
-<img style='margin-left:60px; margin-bottom:10px; width:64px;' border='0' src='/otsdaq_icons/android-icon-144x144.png'>
+<img style='margin-left:6px; margin-bottom:10px; width:150px;' border='0' src='/logo.png'>
 </a>
 
 <br>
