new messages exchange between parent and child in the DesktopContent.js

--- a/WebGUI/html/SlowControlsDashboardFileTree.html
+++ b/WebGUI/html/SlowControlsDashboardFileTree.html
@@ -164,7 +164,7 @@
 
 		<script>
 
-			var _CONTEXT_MENU_PRIMARY_COLOR = "rgb(220, 220, 220)";;
+			var _CONTEXT_MENU_PRIMARY_COLOR = "rgb(220, 220, 220)";
 			var _CONTEXT_MENU_SECONDARY_COLOR = "rgb(70, 67, 67)";
 
 			var folderCounter = 0;
