--- a/WebGUI/html/widgets/root_visualizer.html
+++ b/WebGUI/html/widgets/root_visualizer.html
@@ -114,7 +114,7 @@
 
 </head>
 
-	<body onload='//init() called by DesktopContent.js'>
+	<body onload="Javascript:init()">
 	<div id="container"></div>
 	<div id="simpleGUI" path="/WebPath/UserWebPath/ControlsDashboardData/"	files=""></div>
 	<div>
