--- a/WebGUI/html/widgets/widget_text.html
+++ b/WebGUI/html/widgets/widget_text.html
@@ -18,7 +18,7 @@
 				color: blue;
 				height: auto;
 		    	text-align: center;
-				fontSize : 12vw;
+				fontSize : 10vw;
 			}
 			div{
 				padding: 2.5px;
@@ -222,7 +222,7 @@
 
 	</head>
 
-	<body onload='//init() called by DesktopContent.js'>
+	<body onload="Javascript:init()">
 
 	<div class="wrapper" id="display" width="100%" height="100%">
 	</div>
