--- a/WebGUI/html/widgets/led.html
+++ b/WebGUI/html/widgets/led.html
@@ -165,7 +165,7 @@
 
 </head>
 
-	<body onload='//init() called by DesktopContent.js'>
+	<body onload="Javascript:init()">
 		<div id="display" width="100%" height="100%">
 		</div>
 	</body>
