--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -383,7 +383,8 @@
             //			display fades in (goto start of gui strategy)			
 			
 			//init called once body has loaded
-			function init() {						
+			function init() 
+			{						
 								
 				_currState = -1;
 				_prevState = -1;
